# homework-3-06

./: pyproject.toml
tests/: test_arrs.py
