[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["seikru <seik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
